# HFT-Backtester

./: CMakeLists.txt  PROJECT_SUMMARY.md  README.md
data/: sample.csv
include/: advanced_backtester.hpp  advanced_reports.hpp  backtester.hpp  costs.hpp  data_loader.hpp  indicators.hpp  metrics.hpp  orderbook.hpp  performance.hpp  reports.hpp  risk.hpp  strategy.hpp  synthetic.hpp
include/strategies/: mean_reversion.hpp  momentum.hpp
src/: advanced_backtester.cpp  backtester.cpp  data_loader.cpp  main.cpp  main_advanced.cpp
tests/: basic_tests.cpp
